# ZenStock

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
accounts/: models.py
accounts/migrations/: 0001_initial.py  __init__.py
accounts/tests/: __init__.py  conftest.py  test_groups.py  test_user_model.py
zenstock/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
zenstock/settings/: base.py
zenstock/tests/: test_ci_fake.py
